# Crysknife

./: .gitattributes  .gitignore  .readthedocs.yaml  BaseCrysknife.ini  BaseInjector.ini  CODE_OF_CONDUCT.md  ConfigRedirects.ini  Crysknife.bat  Crysknife.sh  Crysknife.sln  Crysknife.sln.license  Crysknife.uplugin  Crysknife.uplugin.license  DiffMatchPatch.cs  Injector.bat  Injector.command  Injector.sh  LICENSE  README.md  README.rst  README.zh.md  README.zh.rst  REUSE.toml  UnrealSourceInjector.cs  UnrealSourceInjector.sln  pyproject.toml
.github/workflows/: dotnet.yml
Crysknife/: Crysknife.cs  Crysknife.csproj  CrysknifeConfig.cs  CrysknifeConfigFile.cs  CrysknifeInjector.cs  CrysknifeLogger.cs  CrysknifePatcher.cs  CrysknifeRegex.cs  CrysknifeSetup.cs  CrysknifeUtils.cs  DiffMatchPatch.cs
Crysknife.Tests/: CommentTagPackerTests.cs  ConfigFileTests.cs  ConfigPredicatesTests.cs  Crysknife.Tests.csproj  PatcherTests.cs  SmokeTest.cs  UtilsTests.cs
Documents/: Iteration.dot  build.sh  cli.rst  comment-tag.rst  conf.py  config.rst  generate.sh  index.rst  iteration.dot  iteration.rst  requirements.txt  usage.rst
Documents/locales/zh_CN/LC_MESSAGES/: cli.po  comment-tag.po  (+4 more)
Source/: ConfigFile.cs  Crysknife.Build.cs  Crysknife.cpp  Crysknife.cs  Crysknife.csproj  CrysknifeConfig.cs  CrysknifeConfigFile.cs  CrysknifeInjector.cs  CrysknifeRegex.cs  CrysknifeScript.cs  DiffMatchPatch.cs  Injector.cs  InjectorConfig.cs  UnrealSourceInjector.cs
SourcePatch/: Crysknife.ini
Unity/: CrysknifeConfigFile.jam.cs  CrysknifeModule.jam.cs  CrysknifeModuleRegistration.cpp
(+1 files in other folders)
